--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,47 +31,78 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02'
-
-    // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-
-    // Room components
-    implementation "androidx.room:room-runtime:2.2.5"
-    annotationProcessor "androidx.room:room-compiler:2.2.5"
-    androidTestImplementation "androidx.room:room-testing:2.2.5"
-
-    // RxJava2 & RxAndroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-
-    // RxJava2 for Room
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
-    implementation 'androidx.room:room-rxjava2:2.2.5'
-
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-
-    def lifecycle_version = "2.2.0"
-
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
-
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-
-    //HttpLoggingInterceptor - logging
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
-
-    // Saved state module for ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-
-    //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation 'com.google.android.material:material:1.2.0'
+    //rxjava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    //rx系列与View生命周期同步
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
+    //rxbinding以响应式的方式来处理UI的响应问题
+    //implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
+    //network
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'//数据解析器
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'//网络请求适配器
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
+    //room
+    implementation "androidx.room:room-runtime:2.2.1"
+    annotationProcessor "androidx.room:room-compiler:2.2.1"
+    //paging
+    implementation "androidx.paging:paging-runtime:2.1.0"
+    //navigation
+    implementation "androidx.navigation:navigation-fragment:2.1.0"
+    implementation "androidx.navigation:navigation-ui:2.1.0"
+    //picture
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+//
+//
+//    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02'
+//
+//    // retrofit
+//    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+//
+//    // Room components
+//    implementation "androidx.room:room-runtime:2.2.5"
+//    annotationProcessor "androidx.room:room-compiler:2.2.5"
+//    androidTestImplementation "androidx.room:room-testing:2.2.5"
+//
+//    // RxJava2 & RxAndroid
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+//
+//    // RxJava2 for Room
+//    implementation "android.arch.persistence.room:rxjava2:1.1.1"
+//    implementation 'androidx.room:room-rxjava2:2.2.5'
+//
+//    //Glide
+//    implementation 'com.github.bumptech.glide:glide:4.11.0'
+//
+//    def lifecycle_version = "2.2.0"
+//
+//    // ViewModel
+//    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+//
+//    // LiveData
+//    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+//
+//    //HttpLoggingInterceptor - logging
+//    implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
+//
+//    // Saved state module for ViewModel
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+//
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+//
+//    //RecyclerView
+//    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
